# windows-credential-provider-rs

./: Cargo.toml  README.md  register.reg  unregister.reg
src/: credential_provider.rs  lib.rs  provider_factory.rs  tile.rs
