[package]
name = "windows-credential-provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell_PropertiesSystem",
    "implement",
    "Win32_System_Com",
    "Win32_Graphics_Gdi",
    "Win32_Security_Credentials",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security_Authentication_Identity",
    "Win32_System_Kernel"
]

[lib]
crate-type = ["cdylib"]
